# users_service

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  docker-compose_shared.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  rust.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: 20220606054002_initial.down.sql  20220606054002_initial.up.sql
proto/: users.proto
src/: claims.rs  config.rs  main.rs  model.rs  routes.rs  service.rs
src/models/: config.rs  credential.rs  credentials.rs  dto.rs  identity.rs  jwt_claims.rs  mod.rs  payloads.rs  prelude.rs  responses.rs  user.rs
src/models/identity/: mod.rs  prelude.rs
src/proto/: users.rs
src/routes/: auth.rs  identity.rs  mod.rs  users.rs
src/utils/: config.rs  crypto.rs  migration.rs  mod.rs  prelude.rs
src_legacy/: main.rs
src_legacy/models/: credential.rs  jwt_claims.rs  responses.rs  user.rs
users_microservice/: main.py
users_microservice/api/: config.py  database.py  discord.py  models.py  routes.py  settings.py
users_service/: auth.py  controller.py  crypto.py  database.py  deps.py  guards.py  hooks.py  main.py  models.py  routes.py  schemas.py  security.py
users_service/api/: crypto.py  database.py  deps.py  models.py  routes.py  security.py  settings.py
