[package]
name = "users_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1" }
tokio = { version = "1.17", features = ["full"] }
envy = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
axum = { version = "0.4" }
sea-orm = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
], default-features = false }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = { version = "8" }
sha2 = { version = "0.10" }
