[package]
name = "users_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1" }
tokio = { version = "1.17", features = ["full"] }
envy = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tower = { version = "0.4", features = ["full"] }
tonic = { version = "0.7" }
tonic-reflection = { version = "0.4" }
tonic-health = { version = "0.6" }
prost-types = { version = "0.10" }
prost = { version = "0.10" }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres", "migrate" ] }
jsonwebtoken = { version = "8" }
sha2 = { version = "0.10" }
rand = { version = "0.8.5" }

[build-dependencies]
tonic-build = { version = "0.7" }